--- a/arch/arm64/boot/dts/amlogic/t3_pxp.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_pxp.dts
@@ -82,7 +82,7 @@
 			compatible = "shared-dma-pool";
 			reusable;
 			/* ion_codec_mm max can alloc size 80M*/
-			size = <0x0 0xd000000>;
+			size = <0x0 0x1000000>;
 			alignment = <0x0 0x400000>;
 			linux,contiguous-region;
 		};
@@ -98,31 +98,48 @@
 			 * 10x4736064=45.2M(0x2e) support 12bit
 			 * 10x4074560=40M(0x28) support 10bit
 			 */
-			size = <0x0 0x0B000000>;
+			size = <0x0 0x01000000>;
 			//size = <0x0 0x0>;
 			alignment = <0x0 0x400000>;
 		};
 		/* codec shared reserved */
 		codec_mm_reserved:linux,codec_mm_reserved {
 			compatible = "amlogic, codec-mm-reserved";
-			size = <0x0 0x0>;
+			size = <0x0 0x100000>;
 			alignment = <0x0 0x100000>;
 			//no-map;
+		};
+
+		frc_cma_reserved:linux,frc_cma {
+			compatible = "shared-dma-pool";
+			reusable;
+			/* frc:size need 4M alignment
+			 * 1080P 16 buffer:88Mhz (0x5800000)
+			 * 4k 16 buffer:336Mhz (0x15000000)
+			 * pxp test buffer:200Mhz (0x9800000)
+			 */
+			size = <0x0 0x9800000>;
+			alignment = <0x0 0x400000>;
+			linux,contiguous-region;
+			/*alloc-ranges = <0x0 0x0 0x0 0x3f800000>;*/
 		};
 
 		/* POST PROCESS MANAGER */
 		ppmgr_reserved:linux,ppmgr {
 			compatible = "amlogic, ppmgr_memory";
-			size = <0x0 0x0>;
+			size = <0x0 0x100000>;
+			alignment = <0x0 0x100000>;
+		linux,contiguous-region;
 		};
 
 		picdec_cma_reserved:linux,picdec {
 			compatible = "shared-dma-pool";
 			reusable;
-			size = <0x0 0x0>;
-			alignment = <0x0 0x0>;
+			size = <0x0 0x100000>;
+			alignment = <0x0 0x100000>;
 			linux,contiguous-region;
 		};
+
 	};
 	codec_mm {
 		compatible = "amlogic, codec, mm";
@@ -531,6 +548,28 @@
 		};
 	};
 	/* Audio Related end */
+
+	aml_frc {
+		compatible = "amlogic, t3_frc";
+		dev_name = "aml_frc";
+		status = "disabled";
+		frc_en = <1>;/*1:enabel ;0:disable*/
+		frc_hw_pos = <0>;/*0:before postblend; 1:after postblend*/
+		interrupts = <GIC_SPI 286 IRQ_TYPE_EDGE_RISING
+				GIC_SPI 287 IRQ_TYPE_EDGE_RISING
+				GIC_SPI 271 IRQ_TYPE_EDGE_RISING>;
+		interrupt-names = "irq_frc_in", "irq_frc_out", "irq_frc_rdma";
+		memory-region = <&frc_cma_reserved>;
+		clocks = <&clkc CLKID_FRC>, <&clkc CLKID_ME>;
+		clock-names = "clk_frc", "clk_me";
+		power-domains = <&pwrdm PDID_T3_FRCTOP>, <&pwrdm PDID_T3_FRCME>,
+				<&pwrdm PDID_T3_FRCMC>;
+		power-domain-names = "frc-top","frc-me","frc-mc";
+		reg = <0x0 0xFF050000 0x0 0x30000 /*frc reg*/
+		       0x0 0xFE000000 0x0 0x300
+		       0x0 0xFF000000 0x0 0x10000>; /*frc clk reg*/
+		reg-names = "frc_reg","frc_clk_reg","vpu_reg";
+	};
 }; /* end of / */
 
 &fb {
