--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1213,6 +1213,7 @@
 		phy-reg-size = <0x2000>;
 		usb2-phy-reg = <0xfe03a000>;
 		usb2-phy-reg-size = <0x80>;
+		xhci-port-a-reg = <0xfdd00420>;
 		clocks = <&clkc CLKID_PCIE_PLL>;
 		clock-names = "pcie_refpll";
 		interrupts = <0 281 4>;
@@ -1300,7 +1301,7 @@
 		pcie-ctrl-a-rst-bit = <12>;
 		pwr-ctl = <0>;
 		phy-type = <1>;
-		//power-domains = <&pwrdm PDID_SC2_PCIE>;
+		//power-domains = <&pwrdm PDID_T3_PCIE>;
 		pcie-ctrl-sleep-shift = <15>;
 		pcie-hhi-mem-pd-shift = <26>;
 		pcie-hhi-mem-pd-mask = <0xf>;
